deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: itmu-mis
    tier: backend
spec:
  selector:
    app: itmu-mis
    tier: backend
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: itmu-mis
    tier: frontend
spec:
  selector:
    app: itmu-mis
    tier: frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
